@@ -89,16 +89,32 @@ class GtkReactor(default.PosixReactorBase):
             gtk.input_remove(writes[writer])
             del writes[writer]
 
-    def doIteration(self, delay=0.0):
-        if delay != 0:
-            # attempt to emulate the "don't chew 100% cpu" behavior implied
-            # by delay != 0
-            time.sleep(delay)
-        gtk.mainiteration(0) # 0=don't block
-        # could also try this, might be more appropriate to handle *all*
-        # events, particularly if we have gtk handle our timers too
-        #while gtk.events_pending():
-        #    gtk.mainiteration(0)
+    doIterationTimer = None
+
+    def doIterationTimeout(self, *args):
+        self.doIterationTimer = None
+        return 0 # auto-remove
+    def doIteration(self, delay):
+        # flush some pending events, return if there was something to do
+        # don't use the usual "while gtk.events_pending(): mainiteration()"
+        # idiom because lots of IO (in particular test_tcp's
+        # ProperlyCloseFilesTestCase) can keep us from ever exiting.
+        if gtk.events_pending():
+            gtk.mainiteration(0)
+            return
+        # nothing to do, must delay
+        if delay == 0:
+            return # shouldn't delay, so just return
+        self.doIterationTimer = gtk.timeout_add(delay * 1000,
+                                                self.doIterationTimeout)
+        # This will either wake up from IO or from a timeout.
+        gtk.mainiteration(1) # block
+        # note: with the .simulate timer below, delays > 0.1 will always be
+        # woken up by the .simulate timer
+        if self.doIterationTimer:
+            # if woken by IO, need to cancel the timer
+            gtk.timeout_remove(self.doIterationTimer)
+            self.doIterationTimer = None
 
     def crash(self):
         gtk.mainquit()
